Fixed no-wrap name

--- a/page.styl
+++ b/page.styl
@@ -191,7 +191,10 @@ for color, hex in _colors
 	&__title
 		display block
 		margin-bottom 10px
-
+		
+		&--no-mg
+			margin-bottom 0
+			
 [row='vertical']
 .row--dir-col
 .row--dir-reverse-col
